# serverFileManager

./: .gitignore  CMakeLists.txt  CMakePresets.json  CppProperties.json  vcpkg.json
include/: commands.h  file_manager.h  server.h  serverFileManager.h
src/: commands.cpp  file_manager.cpp  main.cpp  server.cpp
